--- a/index.html
+++ b/index.html
@@ -193,6 +193,90 @@
 	 </div>
        </div>
 
+       <!-- Beyond this part the marketing copy begins. -->
+       <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
+       <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
+       <!-- http://placehold.it -->
+       <div class="row-fluid section1">
+	 <div class="span5 offset1 asset">
+	   <img class="img-polaroid" src="http://placehold.it/480x300">
+	 </div>
+	 <div class="span5 copy">
+	   <p>
+	     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec 
+	     a consequat ipsum. Quisque rutrum lobortis nisl, a ornare eros
+	     scelerisque ut. Suspendisse ipsum leo, pharetra sit amet 
+	     suscipit in, tristique et nisi. Praesent nec felis mattis, 
+	     sagittis tortor at, tincidunt lorem. Cum sociis natoque
+	     penatibus et magnis dis parturient montes, nascetur ridiculus
+	     mus. Nam molestie et orci vel imperdiet. Donec ut mauris
+	     ullamcorper, pellentesque mi vitae, venenatis orci. Nulla non
+	     felis ultrices, accumsan velit sed, ullamcorper odio. Fusce
+	     viverra placerat scelerisque. Vivamus dictum ipsum non
+	     sollicitudin suscipit. Ut vel rhoncus arcu. 
+	   </p>
+	 </div>
+       </div>
+       <div class="row-fluid section2">
+	 <div class="span5 offset1 copy copy-right">
+	   <p>
+	     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec 
+	     a consequat ipsum. Quisque rutrum lobortis nisl, a ornare eros
+	     scelerisque ut. Suspendisse ipsum leo, pharetra sit amet 
+	     suscipit in, tristique et nisi. Praesent nec felis mattis, 
+	     sagittis tortor at, tincidunt lorem. Cum sociis natoque
+	     penatibus et magnis dis parturient montes, nascetur ridiculus
+	     mus. Nam molestie et orci vel imperdiet. Donec ut mauris
+	     ullamcorper, pellentesque mi vitae, venenatis orci. Nulla non
+	     felis ultrices, accumsan velit sed, ullamcorper odio. Fusce
+	     viverra placerat scelerisque. Vivamus dictum ipsum non
+	     sollicitudin suscipit. Ut vel rhoncus arcu. 
+	   </p>
+	 </div>
+	 <div class="span5 asset">
+	   <img class="img-polaroid" src="http://placehold.id/480x300">
+	 </div>
+       </div>
+
+       <!-- For the FAQ, we introduce a little bit of JS, using the accordion. -->
+       <!-- This brings in jquery.js and bootstrap.js as dependencies. -->
+       <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->
+       <div class="row-fluid faq">
+	 <div class="span10 offset1">
+	   <h3>FAQ</h3>
+	   <div class="accordion" id="accordion2">
+	     <div class="accordion-group">
+	       <div class="accordion-heading">
+		 <a class="accordion-toggle" data-toggle="collapse"
+		    data-parent="#accordion2" href="#collapseOne">
+		   What does FAQ stand for?
+		 </a>
+	       </div>
+	       <div id="collapseOne" class="accordion-body colllapse">
+		 <div class="accordion-inner">
+		   Frequently Asked Question.
+		 </div>
+	       </div>
+	     </div>
+	     <div class="accordion-group">
+	       <div class="accordion-heading">
+		 <a class="accordion-toggle" data-toggle="collapse"
+		    data-parent="#accordion2" href="#colapseTwo">
+		   What's a Frequently Asked Questions?
+		 </a>
+	       </div>
+	       <div id="collapseTwo" class="accordion-body collapse">
+		 <div class="accordion-inner">
+		   A question which is commonly asked by users.
+		 </div>
+	       </div>
+	     </div>
+	   </div>
+	 </div>
+
+       </div>
+
+
 
      </div>
 
