--- a/index.html
+++ b/index.html
@@ -276,70 +276,18 @@
 
        </div>
 
-
-
+       <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
+       <!-- http://creativecommons.org/licenses/ -->
+       <div class="row-fluid footer">
+	 <div class="span12">
+	   <p>This work is licensed under
+	     the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
+	       By-SA 3.0
+	     </a>, without all the cruft that would otherwise be
+	     put at the bottom of the page.</p>
+	 </div>
+       </div>
      </div>
-
-
-
-
-      <div class="container">
-         <div class="row navigation">
-            <div class="span2 logo">
-               Logo
-            </div>
-            <div class="span6 blank">
-               Blank
-            </div>
-            <div class="span4 about">
-               About
-            </div>
-         </div>
-         <div class="row heading">
-            <div class="span12">
-               <h1>Bitstarter title</h1>
-            </div>
-         </div>
-         <div class="row subheading">
-            <div class="span12">
-               <p class="lead">This is my fist bitstarter project.</p>
-            </div>
-         </div>
-         <div class="row pitch">
-            <div class="span6 video">
-               Video
-            </div>
-            <div class="span6">
-               <div class="thermometer">
-                  Thermometer
-               </div>
-               <div class="order">
-                  Order
-               </div>
-               <div class="social">
-                  Social
-               </div>
-            </div>
-         </div>
-         <div class="row section1">
-            <div class="span12">
-               Marketing Section 1
-            </div>
-         </div>
-         <div class="row section2">
-            <div class="span12">
-               Marketing Section 2
-            </div>
-         </div>
-         <div class="row faq">
-            <div class="span12">
-               FAQ
-            </div>
-         </div>
-         <div class="row footer">
-            <div class="span12">
-               Footer
-            </div>
-         </div>
    </body>
 </html>
+
