--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 	   </p>
 	 </div>
 	 <div class="span5 asset">
-	   <img class="img-polaroid" src="http://placehold.id/480x300">
+	   <img class="img-polaroid" src="http://placehold.it/480x300">
 	 </div>
        </div>
 
