--- a/index.html
+++ b/index.html
@@ -130,21 +130,22 @@
        <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
        <!-- www.google.com/fonts/specimen/Ubuntu -->
        <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
-       <div class="row-fluid heading">
+       <div class="row-fluid center heading">
 	 <div class="span12">
-	   <h1>Product</h1>
+	   <h1>Space</h1>
 	 </div>
        </div>
        <div class="row-fluid-subheading">
 	 <div class="span12">
 	   <!-- Special typography form Bootstrap for lead paragraph -->
 	   <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-	   <p class="lead">One sentence description.</p>
+	   <p class="lead">Space finder and location analysis</p>
 	 </div>
        </div>
        <div class="row-fluid pitch">
 	 <div class="span5 offset1 video">
-	   <img class="img-polaroid" src="http://placehold.it/480x300">
+	   <!--img class="img-polaroid" src="http://placehold.it/480x300"-->
+	   <img class="img-polaroid" src="http://i.imgur.com/gYHfa63.jpg">
 	 </div>
 
 	 <!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
@@ -199,7 +200,8 @@
        <!-- http://placehold.it -->
        <div class="row-fluid section1">
 	 <div class="span5 offset1 asset">
-	   <img class="img-polaroid" src="http://placehold.it/480x300">
+	   <!--img class="img-polaroid" src="http://placehold.it/480x300"-->
+	   <img class="img-polaroid" src="http://i.imgur.com/tG26W7n.jpg">
 	 </div>
 	 <div class="span5 copy">
 	   <p>
@@ -234,7 +236,8 @@
 	   </p>
 	 </div>
 	 <div class="span5 asset">
-	   <img class="img-polaroid" src="http://placehold.it/480x300">
+	   <!--img class="img-polaroid" src="http://placehold.it/480x300"-->
+	   <img class="img-polaroid" src="http://i.imgur.com/Bcd4wpW.jpg">
 	 </div>
        </div>
 
