Update mockup description, FAQ section, and fix accordion

--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
 	       </div>
 	       <div class="span4">
 		 <div class="linediv-c">
-		   <h3>$6000</h3> <p>of $10,000</p>
+		   <h3>$16000</h3> <p>of $50,000</p>
 		 </div>
 	       </div>
 	       <div class="span4">
 		 <div class="linediv-r">
-		   <h3>10</h3> <p>days left</p>
+		   <h3>30</h3> <p>days left</p>
 		 </div>
 	       </div>
 	     </div> <!-- statistics -->
@@ -205,34 +205,30 @@
 	 </div>
 	 <div class="span5 copy">
 	   <p>
-	     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec 
-	     a consequat ipsum. Quisque rutrum lobortis nisl, a ornare eros
-	     scelerisque ut. Suspendisse ipsum leo, pharetra sit amet 
-	     suscipit in, tristique et nisi. Praesent nec felis mattis, 
-	     sagittis tortor at, tincidunt lorem. Cum sociis natoque
-	     penatibus et magnis dis parturient montes, nascetur ridiculus
-	     mus. Nam molestie et orci vel imperdiet. Donec ut mauris
-	     ullamcorper, pellentesque mi vitae, venenatis orci. Nulla non
-	     felis ultrices, accumsan velit sed, ullamcorper odio. Fusce
-	     viverra placerat scelerisque. Vivamus dictum ipsum non
-	     sollicitudin suscipit. Ut vel rhoncus arcu. 
+	     One of the key factors that the court must take into account 
+	     when making a decision is the  financial needs. The meaning 
+	     in this context has generated uncertainty and there is confusion
+	     about the extent to which one spouse should be required to meet 
+	     the needs after their formal relationship has come to an end. 
+	     Another area of particular uncertainty is how the courts treat
+	     property that one party brought into the relationship or acquired 
+	     by gift or inheritance during it.
 	   </p>
 	 </div>
        </div>
        <div class="row-fluid section2">
 	 <div class="span5 offset1 copy copy-right">
 	   <p>
-	     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec 
-	     a consequat ipsum. Quisque rutrum lobortis nisl, a ornare eros
-	     scelerisque ut. Suspendisse ipsum leo, pharetra sit amet 
-	     suscipit in, tristique et nisi. Praesent nec felis mattis, 
-	     sagittis tortor at, tincidunt lorem. Cum sociis natoque
-	     penatibus et magnis dis parturient montes, nascetur ridiculus
-	     mus. Nam molestie et orci vel imperdiet. Donec ut mauris
-	     ullamcorper, pellentesque mi vitae, venenatis orci. Nulla non
-	     felis ultrices, accumsan velit sed, ullamcorper odio. Fusce
-	     viverra placerat scelerisque. Vivamus dictum ipsum non
-	     sollicitudin suscipit. Ut vel rhoncus arcu. 
+	     Rental, tenancy, and lease agreements are formal and informal 
+	     contracts between an identified landlord and tenant giving rights
+	     to both parties, e.g. the tenant's right to occupy the accommodation
+	     for an agreed term and the s right to receive an agreed rent. If one
+	     of these elements is missing, only a tenancy at will or bare licence 
+	     comes into being landlord.
+	     Mixed Use projects often have elements of most or all of the other
+	     categories, not infrequently including a hotel, office building, 
+	     ground floor retail with residential condominium above and a parking
+	     garage.
 	   </p>
 	 </div>
 	 <div class="span5 asset">
@@ -252,25 +248,27 @@
 	       <div class="accordion-heading">
 		 <a class="accordion-toggle" data-toggle="collapse"
 		    data-parent="#accordion2" href="#collapseOne">
-		   What does FAQ stand for?
+		   Why Space is the best choice?
 		 </a>
 	       </div>
-	       <div id="collapseOne" class="accordion-body colllapse">
+	       <div id="collapseOne" class="accordion-body collapse">
 		 <div class="accordion-inner">
-		   Frequently Asked Question.
+		   Space is supported by thousands property agent who have
+		   vast experience and specialized in your local area.
 		 </div>
 	       </div>
 	     </div>
 	     <div class="accordion-group">
 	       <div class="accordion-heading">
 		 <a class="accordion-toggle" data-toggle="collapse"
-		    data-parent="#accordion2" href="#colapseTwo">
-		   What's a Frequently Asked Questions?
+		    data-parent="#accordion2" href="#collapseTwo">
+		   How to join Space and get the property analysis?
 		 </a>
 	       </div>
 	       <div id="collapseTwo" class="accordion-body collapse">
 		 <div class="accordion-inner">
-		   A question which is commonly asked by users.
+		   Simply to provide your mail address and password, or connect
+		   via facebook or twitter account.
 		 </div>
 	       </div>
 	     </div>
